[Bug #22181] Fix branch-peephole-optimization label & insn ID collisions